# otus_algo_07

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  tester.h
